2002-11-02  Bill Bumgarner  <bbum@codefab.com>
	* Change addressbook example to be in line with updated
	convenience methods.

2002-10-31 Ronald Oussoren <oussoren@cistron.nl>
	* Use 'nibwrapper' technique in all GUI examples.
	* Actually remove old version of classnib.py and add the
	  version in the new location (as used by Tools/mknibwrapper)

2002-10-31  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a typo in NSOutlineViewDataSource.
	* Fixed the classnib.py script slightly.
	* Added support for NSSet in the convenience methods.

2002-10-30  Bill Bumgarner  <bbum@codefab.com>
	* Many, many changes to the convenience methods in the objc
	module.  Wrote a bunch of tests in test_nsarray and
	test_nsdictionary.

	* Fixed a bug in the NSDraggingDestination method declarations and
	made all of the methods optional (the developer only needs to
	implement a subset of the methods and none of the methods are
	required to be a part of that subset).
	* Fixed 'in' operation on arrays to use containsObject:.  Should
	work with sets.  Will not work with NSDictionary.
	* Fixed enum parser to handle enums that don't start with a
	typedef.  Regenerated appkit and foundation enumerated types files
	to pick up missing enums.
	* Added some tests and cleaned up a bit of the existing tests in
	test_subclass.py

2002-10-30  Ronald Oussoren <oussoren@cistron.nl>
	* Fix memory corruption bug
	* Add Obj-C exception handling around calls to ObjC_FindNative,
	  this avoids an unhandled exception when during:
	  	help('Foundation')
	  I didn't add a testcase for this as the above code takes a
	  _very_ long time to execute.
	* Some minor code cleanup (mostly removal of print statements)
	* Reset '__module__' of classes in the __init__.py of AppKit and 
	  Foundation. help(AppKit) now works (and generates an lot of
	  output)
	* pythonify_c_value("@", ...) now correctly process Class objects.
	* Modules/objc/class-builder.m: Can't just call 